fix(blueprint): 支付成功库存扣减改用读侧端口并补幂等唯一索引
- OrderPaidEventHandler 改走 OrderReadPort.findOrderWithItems：聚合重载无级联，order.getItems() 恒空导致 confirmStock 永不执行（静默失效）

- 明细为空仍显式留痕，避免库存永不扣减却无报错

- schema.sql: bp_payment 增加 uk_bp_payment_tenant_channel 唯一索引，兜底并发回调双写（E-9.6.2）

- 同步 OrderPaidEventHandlerTest：依赖改为 OrderReadPort 并构造 OrderWithItemsRow