@@ -2,20 +2,19 @@ package com.bone.blueprint.application.event;
 
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.bone.blueprint.domain.gateway.InventoryGateway;
-import com.bone.blueprint.domain.order.Order;
-import com.bone.blueprint.domain.order.OrderItem;
+import com.bone.blueprint.domain.gateway.OrderReadPort;
 import com.bone.blueprint.domain.order.event.OrderPaidEvent;
-import com.bone.blueprint.domain.repository.OrderRepository;
+import com.bone.blueprint.domain.order.read.OrderWithItemsRow;
 import java.math.BigDecimal;
 import java.time.Instant;
 import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -29,26 +28,27 @@ import org.mockito.junit.jupiter.MockitoExtension;
  * {@code confirmStock}，否则与 {@code Order.confirmPaid()} 发布的 {@code OrderPaidEvent} 链路重复，造成库存双重扣减。
  *
  * <p><b>回归防护 2（静默失败）</b>：明细为空时显式留痕。库存永不扣减却无任何报错是最危险的失败形态—— 表面上支付、发货一切正常，实际库存账实不符，直到盘点才暴露。
+ *
+ * <p><b>明细来源</b>：聚合重载不含级联（SDK 无级联），{@code Order.getItems()} 恒为空，故本处理器与 {@code
+ * OrderCreatedEventHandler} 一致走 {@link OrderReadPort#findOrderWithItems} 读取明细，不依赖重载后的聚合。
  */
 @ExtendWith(MockitoExtension.class)
 class OrderPaidEventHandlerTest {
 
-  @Mock private OrderRepository orderRepository;
+  @Mock private OrderReadPort orderReadPort;
 
   @Mock private InventoryGateway inventoryGateway;
 
   @InjectMocks private OrderPaidEventHandler handler;
 
+  private static OrderWithItemsRow row(Long itemId, Long productId, Integer quantity) {
+    return new OrderWithItemsRow(
+        null, null, null, null, null, itemId, productId, null, quantity, null, null);
+  }
+
   @Test
   void testConfirmsStockForEachItem() {
-    Order order =
-        Order.create(
-            1L,
-            1L,
-            1L,
-            Collections.singletonList(
-                OrderItem.create(1L, 1L, 1L, "商品1", 2, new BigDecimal("100"))));
-    when(orderRepository.findByIdInTenant(1L, 1L)).thenReturn(order);
+    when(orderReadPort.findOrderWithItems(1L, 1L)).thenReturn(List.of(row(1L, 1L, 2)));
 
     handler.handle(new OrderPaidEvent(1L, 1L, 1L, new BigDecimal("200"), Instant.now()));
 
@@ -57,10 +57,8 @@ class OrderPaidEventHandlerTest {
 
   @Test
   void testEmptyItemsDoesNotSilentlyConfirm() {
-    // 模拟「聚合明细未级联加载」的异常状态
-    Order order = mock(Order.class);
-    when(order.getItems()).thenReturn(Collections.emptyList());
-    when(orderRepository.findByIdInTenant(1L, 1L)).thenReturn(order);
+    // 模拟「明细未随订单落库」的异常状态：读侧无明细行
+    when(orderReadPort.findOrderWithItems(1L, 1L)).thenReturn(Collections.emptyList());
 
     handler.handle(new OrderPaidEvent(1L, 1L, 1L, new BigDecimal("200"), Instant.now()));
 
